--- a/webapp/package.json
+++ b/webapp/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "highlight.js": "^9.18.1",
+    "js-cookie": "^2.2.1",
     "marked": "^0.8.0",
     "mathjax3": "^3.0.0-beta.4",
     "react": "^16.13.0",
@@ -27,6 +28,7 @@
     "@babel/preset-react": "^7.8.3",
     "@types/classnames": "^2.2.9",
     "@types/highlight.js": "^9.12.3",
+    "@types/js-cookie": "^2.2.5",
     "@types/marked": "^0.7.2",
     "@types/node": "^13.7.6",
     "@types/react": "^16.9.23",
